--- a/config/14M/eval_lawa.yaml
+++ b/config/14M/eval_lawa.yaml
@@ -5,10 +5,10 @@ sampler_seed: 1996
 
 # avg
 eval_ckpt_folder: "/fast/najroldi/exp/llm/plm_14M_save/job_idx_0"
-avg_start_step: 0
-avg_every_steps: 12
+avg_start_step: 100
+avg_every_steps: 24
 avg_scheme: "LAWA"
-lawa_queue_len: 2
+lawa_queue_len: 1
 
 cuda_matmul_allow_tf32: True
 cudnn_allow_tf32: True
@@ -63,7 +63,7 @@ lr_end_pct: 0.001
 log_every_steps: 12
 print_progress: False
 
-use_wandb: False
+use_wandb: True
 wandb_watch: False
 wandb_project: 'wa_lm'
 wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
