--- a/config/eval/160M_10B_01.yaml
+++ b/config/eval/160M_10B_01.yaml
@@ -1,9 +1,17 @@
 
 deterministic: False
 seed: 1996
+sampler_seed: 1996
 
 cuda_matmul_allow_tf32: True
 cudnn_allow_tf32: True
+
+# avg
+eval_ckpt_folder: "/fast/najroldi/exp/llm/plm_save_best_01/job_idx_0"
+avg_start_step: 0
+avg_every_steps: 60
+avg_scheme: "LAWA"
+lawa_queue_len: 5
 
 trainset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/train"
 vocab_size: 50257
@@ -31,7 +39,7 @@ steps_budget: 19200
 # note 1: this is micro batch size if grad_accumulation_steps>1
 # note 2: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
 micro_batch_size: 64
-grad_accumulation_steps: 2
+grad_accumulation_steps: 1
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -60,8 +68,8 @@ use_wandb: True
 wandb_watch: False
 wandb_project: 'wa_lm'
 wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
-wandb_run_name: 'plainLM_check_01'
-exp_name: 'plainLM_check_01'
+wandb_run_name: 'plainLM_eval_LAWA_01'
+exp_name: 'plainLM_eval_LAWA_01'
 check_existing_wandb_run: True
 
 resume: False
@@ -69,9 +77,7 @@ resume_micro_step: null
 resume_exp_name: null
 
 out_dir: '/fast/najroldi/exp/llm'
-save_last_checkpoint: True
+save_last_checkpoint: False
 save_intermediate_checkpoints: False
 save_every_steps: null
-over_write: True
-
-eval_ckpt_folder: '/fast/najroldi/exp/wa_lm/adamw_cosine_tune_01/job_idx_9'
+over_write: False
