--- a/config/130M_10BT/sweep.yaml
+++ b/config/130M_10BT/sweep.yaml
@@ -1,16 +1,9 @@
 
-deterministic: True
+deterministic: False
 seed: 1996
 
-# avg
-eval_ckpt_folder: "/fast/najroldi/exp/llm/plm_14M_save"
-avg_start_step: 0
-avg_every_steps: 1
-avg_scheme: "LAWA"
-lawa_queue_len: 2
-
-cuda_matmul_allow_tf32: False
-cudnn_allow_tf32: False
+cuda_matmul_allow_tf32: True
+cudnn_allow_tf32: True
 
 trainset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/train"
 vocab_size: 50257
@@ -25,20 +18,19 @@ validset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/valid"
 eval_every_steps: 10
 
 model: 'transformer'
-d_model: 128
+d_model: 768
 expand: '8/3'
-n_layers: 4
-n_heads: 4
-mlp_class: 'glu'
+n_layers: 12
+n_heads: 12
+mlp_class: 'gmlp'
 tie_embeddings: True
-torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps)
-steps_budget: 100
+steps_budget: 19200
 
 # note 1: this is micro batch size if grad_accumulation_steps>1
 # note 2: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 8
+micro_batch_size: 64
 grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
@@ -47,37 +39,37 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: 0.001
-weight_decay: 0.1
+lr: [3.e-4, 1.e-3, 3.e-3, 1.e-2, 3.e-2]
+weight_decay: [0.01, 0.1]
 beta1: 0.9
 beta2: 0.95
-grad_clip: 1.0
-eps: 1.e-20
+grad_clip: [0.01, 0.1]
+eps: 1.e-12
 
 scheduler: 'warmup_cosine'
-warmup_steps: 20
+warmup_steps: [0.01, 0.1]
 cooldown_steps: null
 lr_start: 1.e-10
 lr_end: null
-lr_end_pct: 0.001
+lr_end_pct: [0.1, 0.0]
 
 log_every_steps: 10
 print_progress: False
 
 use_wandb: True
 wandb_watch: False
-wandb_project: 'plainLM_tests'
-wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
+wandb_project: 'wa_lm_2'
+wandb_dir: '/fast/najroldi/logs/wa_lm_2/wandb'
 check_existing_wandb_run: False
-wandb_run_name: 'plm_14M_LAWA'
-exp_name: 'plm_14M_LAWA'
+wandb_run_name: 'sweep_01'
+exp_name: 'sweep_01'
 
 resume: False
 resume_step: null
 resume_exp_name: null
 
-out_dir: '/fast/najroldi/exp/llm'
-save_last_checkpoint: False
-save_intermediate_checkpoints: False
+out_dir: '/fast/najroldi/exp/wa_lm_2'
+save_last_checkpoint: True
+save_intermediate_checkpoints: True
 save_every_steps: 10
 over_write: True
