--- a/config/eval/70M/cfg.yaml
+++ b/config/eval/70M/cfg.yaml
@@ -8,7 +8,7 @@ cudnn_allow_tf32: True
 trainset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/train"
 vocab_size: 50257
 seq_len: 1024
-sampler: 'random'
+sampler: 'stateful_random'
 sampler_seed: 1996
 num_workers: 4
 
@@ -17,20 +17,20 @@ validset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/valid"
 eval_every_steps: 192
 
 model: 'transformer'
-d_model: 768
+d_model: 512
 expand: '8/3'
-n_layers: 12
-n_heads: 12
+n_layers: 6
+n_heads: 8
 mlp_class: 'glu'
-tie_embeddings: True
+tie_embeddings: False
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps)
-steps_budget: 19200
+steps_budget: 9600
 
 # note 1: this is micro batch size if grad_accumulation_steps>1
 # note 2: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 64
+micro_batch_size: 2
 grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
@@ -39,24 +39,25 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: 0.01
+lr: 0.001
+# lr: [1.e-3, 2.e-3, 5.e-3, 1.e-2, 2.e-2]
 weight_decay: 0.1
 beta1: 0.9
 beta2: 0.95
 grad_clip: 1.0
-eps: 1.e-20
+eps: 1.e-8
 
-scheduler: 'warmup_cosine'
-warmup_steps: 700
+scheduler: 'warmup_constant'
+warmup_steps: 500
 cooldown_steps: null
 lr_start: 1.e-10
 lr_end: null
-lr_end_pct: 0.001
+lr_end_pct: null
 
-log_every_steps: 48
-print_progress: False
+log_every_steps: 1
+print_progress: True
 
-use_wandb: True
+use_wandb: False
 wandb_watch: False
 wandb_project: 'wa_lm'
 wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
@@ -65,16 +66,16 @@ exp_name: 'plm_save_best_01'
 check_existing_wandb_run: False
 
 resume: False
-resume_micro_step: null
+resume_step: null
 resume_exp_name: null
 
 out_dir: '/fast/najroldi/exp/llm'
-save_last_checkpoint: True
-save_intermediate_checkpoints: True
-save_every_steps: 12
+save_last_checkpoint: False
+save_intermediate_checkpoints: False
+save_every_steps: nulll
 
 save_optim: False
 save_scheduler: False
 save_scaler: False
 
-over_write: True
+over_write: False
