--- a/config/130M_10BT/sweep_2gpu.yaml
+++ b/config/130M_10BT/sweep_2gpu.yaml
@@ -1,18 +1,11 @@
 
-deterministic: True
+deterministic: False
 seed: 1996
 
-# avg
-eval_ckpt_folder: "/fast/najroldi/exp/llm/plm_14M_save"
-avg_start_step: 0
-avg_every_steps: 1
-avg_scheme: "LAWA"
-lawa_queue_len: 2
+cuda_matmul_allow_tf32: True
+cudnn_allow_tf32: True
 
-cuda_matmul_allow_tf32: False
-cudnn_allow_tf32: False
-
-trainset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/train"
+trainset_path: "/fast/najroldi/data/finewebedu2/train"
 vocab_size: 50257
 seq_len: 1024
 num_workers: 4
@@ -21,25 +14,25 @@ sampler: 'stateful_random'
 sampler_seed: 1996
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/valid"
+validset_path: "/fast/najroldi/data/finewebedu2/val"
 eval_every_steps: 10
 
 model: 'transformer'
-d_model: 128
+d_model: 768
 expand: '8/3'
-n_layers: 4
-n_heads: 4
+n_layers: 12
+n_heads: 12
 mlp_class: 'glu'
 tie_embeddings: True
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps)
-steps_budget: 100
+steps_budget: 9400
 
 # note 1: this is micro batch size if grad_accumulation_steps>1
 # note 2: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 8
-grad_accumulation_steps: 2
+micro_batch_size: 64
+grad_accumulation_steps: 4
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -47,36 +40,37 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: 0.001
-weight_decay: 0.1
+lr: [3.e-4, 1.e-3, 3.e-3, 1.e-2, 3.e-2]
+weight_decay: [0.01, 0.1]
 beta1: 0.9
 beta2: 0.95
-grad_clip: 1.0
-eps: 1.e-20
+grad_clip: [0.01, 0.1]
+eps: 1.e-12
 
 scheduler: 'warmup_cosine'
-warmup_steps: 20
+warmup_steps: [0.01, 0.1]
 cooldown_steps: null
 lr_start: 1.e-10
 lr_end: null
-lr_end_pct: 0.001
+lr_end_pct: [0.1, 0.0]
 
 log_every_steps: 10
 print_progress: False
 
 use_wandb: True
 wandb_watch: False
-wandb_project: 'plainLM_tests'
-wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
-wandb_run_name: 'plm_14M_LAWA'
-exp_name: 'plm_14M_LAWA'
+check_existing_wandb_run: True
+wandb_project: 'wa_lm_2'
+wandb_dir: '/fast/najroldi/logs/wa_lm_2/wandb'
+wandb_run_name: 'sweep_01'
+exp_name: 'sweep_01'
 
 resume: False
 resume_step: null
 resume_exp_name: null
 
-out_dir: '/fast/najroldi/exp/llm'
+out_dir: '/fast/najroldi/exp/wa_lm_2'
 save_last_checkpoint: False
 save_intermediate_checkpoints: False
-save_every_steps: 10
+save_every_steps: null
 over_write: True
