--- a/config/130M_10BT/save_fastest_to_target_02.yaml
+++ b/config/130M_10BT/save_fastest_to_target_02.yaml
@@ -1,37 +1,37 @@
 
 deterministic: False
-seed: 1996
+seed: 2996
 
 cuda_matmul_allow_tf32: True
 cudnn_allow_tf32: True
 
-trainset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/train"
+trainset_path: "/fast/najroldi/data/finewebedu2/train"
 vocab_size: 50257
 seq_len: 1024
 num_workers: 4
 
 sampler: 'stateful_random'
-sampler_seed: 1996
+sampler_seed: 2996
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fineweb/fw_20B_tokens_ctx1024/valid"
-eval_every_steps: 24
+validset_path: "/fast/najroldi/data/finewebedu2/val"
+eval_every_steps: 40
 
 model: 'transformer'
-d_model: 128
+d_model: 768
 expand: '8/3'
-n_layers: 6
-n_heads: 4
+n_layers: 12
+n_heads: 12
 mlp_class: 'glu'
 tie_embeddings: True
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps)
-steps_budget: 10
+steps_budget: 9400
 
 # note 1: this is micro batch size if grad_accumulation_steps>1
 # note 2: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 32
+micro_batch_size: 64
 grad_accumulation_steps: 4
 
 # note: choose between {float32, float16, bfloat16}
@@ -40,40 +40,41 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: 0.001
-weight_decay: 0.1
+lr: 0.01
+weight_decay: 0.01
 beta1: 0.9
 beta2: 0.95
-grad_clip: 1.0
-eps: 1.e-20
+grad_clip: 0.1
+eps: 1.e-12
 
 scheduler: 'warmup_cosine'
-warmup_steps: 700
+warmup_steps: 0.1
 cooldown_steps: null
 lr_start: 1.e-10
 lr_end: null
-lr_end_pct: 0.001
+lr_end_pct: 0.1
 
-log_every_steps: 1
-print_progress: True
+log_every_steps: 40
+print_progress: False
 
 use_wandb: True
 wandb_watch: False
-wandb_project: 'plainLM_tests'
-wandb_dir: '/fast/najroldi/logs/wa_lm/wandb'
-wandb_run_name: 'test_stateful_random_DDP_02'
-exp_name: 'test_stateful_random_DDP_02'
+check_existing_wandb_run: True
+wandb_project: 'wa_lm_2'
+wandb_dir: '/fast/najroldi/logs/wa_lm_2/wandb'
+wandb_run_name: 'save_fastest_to_target_02'
+exp_name: 'save_fastest_to_target_02'
 
-resume: True
-resume_step: 4
-resume_exp_name: 'test_stateful_random_DDP_01'
+resume: False
+resume_step: null
+resume_exp_name: null
 
-# resume: False
-# resume_step: null
-# resume_exp_name: null
-
-out_dir: '/fast/najroldi/exp/llm'
+out_dir: '/fast/najroldi/exp/wa_lm_2'
 save_last_checkpoint: True
 save_intermediate_checkpoints: True
 save_every_steps: 1
+save_optim: False
+save_scheduler: False
+save_scaler: False
+
 over_write: True
