--- a/config/doc_mask/doc_mask_sweep.yaml
+++ b/config/doc_mask/doc_mask_sweep.yaml
@@ -4,18 +4,18 @@
 deterministic: False
 seed: 100
 
-trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train" # tokens: 9_849_288_704
+trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train" # tokens: 9_849_288_704
 vocab_size: 50257
-seq_len: 8192
+seq_len: 2048
 intra_doc_masking: [True, False]
 sampler: 'sequential'
 sampler_seed: 1996
 num_workers: 4
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train"
+validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train"
 valid_tokens: 1_000_000
-eval_every_steps: 25
+eval_every_steps: 100
 
 model: 'transformer'
 d_model: 768
@@ -28,12 +28,12 @@ tie_embeddings: True
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps * ddp_world_size)
-steps_budget: 4625
+steps_budget: 18500
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 4
-grad_accumulation_steps: 4
+micro_batch_size: 32
+grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -54,21 +54,22 @@ lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
 
-log_every_steps: 10
+log_every_steps: 50
 print_progress: True
 
 use_wandb: True
 wandb_project: 'doc_mask'
 wandb_dir: '/fast/najroldi/logs/doc_mask/wandb'
-wandb_run_name: 'sweep_130M_03'
-exp_name: 'sweep_130M_03'
+wandb_run_name: 'sweep_130M_01'
+exp_name: 'sweep_130M_01'
 out_dir: '/fast/najroldi/exp/doc_mask'
 over_write: True
 
 resume: False
-resume_micro_step: null
+resume_step: null
 resume_exp_name: null
 
-save_last_checkpoint: False
-save_intermediate_checkpoints: False
-save_every_steps: null
+save_last_checkpoint: True
+save_intermediate_checkpoints: True
+save_every_steps: 500
+
