--- a/config/doc_mask/doc_mask_sweep_8192.yaml
+++ b/config/doc_mask/doc_mask_sweep_8192.yaml
@@ -4,20 +4,27 @@
 deterministic: False
 seed: 100
 
-trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/train" # tokens: 9_849_288_704
-vocab_size: 50277
-seq_len: 2048
-intra_doc_masking: False
-sampler: 'stateful_random'
+trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train" # tokens: 9_849_288_704
+vocab_size: 50257
+seq_len: 8192
+intra_doc_masking: [True, False]
+sampler: 'sequential'
 sampler_seed: 1996
 num_workers: 4
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/valid"
+validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train"
 valid_tokens: 1_000_000
 eval_every_steps: 100
 
-model: 'pythia-160m'
+model: 'transformer'
+d_model: 768
+mlp_class: 'glu'
+expand: '8/3'
+n_layers: 12
+n_heads: 12
+rms_norm: True
+tie_embeddings: True
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps * ddp_world_size)
@@ -25,7 +32,7 @@ steps_budget: 18500
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 16
+micro_batch_size: 4
 grad_accumulation_steps: 4
 
 # note: choose between {float32, float16, bfloat16}
@@ -34,7 +41,7 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: [3.e-3, 1.e-3, 1.e-2]
+lr: [1.e-4, 3.e-4, 1.e-3, 3.e-3, 1.e-2]
 weight_decay: 0.1
 beta1: 0.9
 beta2: 0.95
@@ -42,7 +49,7 @@ grad_clip: 1.0
 
 scheduler: 'wsd'
 warmup_steps: 0.01
-cooldown_steps: 3500
+cooldown_steps: 0.2
 lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
@@ -51,17 +58,17 @@ log_every_steps: 50
 print_progress: True
 
 use_wandb: True
-wandb_project: 'quant'
-wandb_dir: '/fast/najroldi/logs/quant/wandb'
-wandb_run_name: 'pythia_160M_10BT_baseline_01'
-exp_name: 'pythia_160M_10BT_baseline_01'
-out_dir: '/fast/najroldi/exp/quant'
+wandb_project: 'doc_mask'
+wandb_dir: '/fast/najroldi/logs/doc_mask/wandb'
+wandb_run_name: 'sweep_130M_02'
+exp_name: 'sweep_130M_02'
+out_dir: '/fast/najroldi/exp/doc_mask'
 over_write: True
 
 resume: False
-resume_micro_step: null
+resume_step: null
 resume_exp_name: null
 
-save_last_checkpoint: True
-save_intermediate_checkpoints: True
-save_every_steps: 500
+save_last_checkpoint: False
+save_intermediate_checkpoints: False
+save_every_steps: null
