--- a/config/doc_mask/test_8192.yaml
+++ b/config/doc_mask/test_8192.yaml
@@ -4,16 +4,16 @@
 deterministic: False
 seed: 100
 
-trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train" # tokens: 9_849_288_704
+trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train" # tokens: 9_849_288_704
 vocab_size: 50257
-seq_len: 2048
-intra_doc_masking: False
-sampler: 'stateful_random'
+seq_len: 8192
+intra_doc_masking: True
+sampler: 'sequential'
 sampler_seed: 1996
 num_workers: 4
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train"
+validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_8192/train"
 valid_tokens: 1_000_000
 eval_every_steps: 100
 
@@ -28,11 +28,11 @@ tie_embeddings: True
 torch_compile: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps * ddp_world_size)
-steps_budget: 18500
+steps_budget: 4600
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 32
+micro_batch_size: 8
 grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
@@ -41,7 +41,7 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: 3.e-3
+lr: 1.e-4
 weight_decay: 0.1
 beta1: 0.9
 beta2: 0.95
@@ -57,19 +57,19 @@ lr_end_pct: null
 log_every_steps: 1
 print_progress: True
 
-use_wandb: True
+use_wandb: False
 wandb_project: 'doc_mask'
 wandb_dir: '/fast/najroldi/logs/doc_mask/wandb'
-wandb_run_name: 'test_mem'
-exp_name: 'test_mem'
+wandb_run_name: 'None'
+exp_name: 'None'
 out_dir: '/fast/najroldi/exp/doc_mask'
-over_write: True
+over_write: False
 
 resume: False
-resume_micro_step: null
+resume_step: null
 resume_exp_name: null
 
 save_last_checkpoint: False
 save_intermediate_checkpoints: False
-save_every_steps: null
+save_every_steps: 500
 
