--- a/config/pythia10BT/baseline_01.yaml
+++ b/config/pythia10BT/baseline_01.yaml
@@ -4,8 +4,8 @@
 deterministic: False
 seed: 100
 
-trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train" # tokens: 9_849_288_704
-vocab_size: 50257
+trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/train" # tokens: 9_849_288_704
+vocab_size: 50277
 seq_len: 2048
 intra_doc_masking: False
 sampler: 'stateful_random'
@@ -13,27 +13,24 @@ sampler_seed: 1996
 num_workers: 4
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10B_tokenizer_GPT2/ctx_2048/train"
+validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/valid"
 valid_tokens: 1_000_000
 eval_every_steps: 100
 
 model: 'pythia-160m'
-d_model: 768
-mlp_class: 'glu'
-expand: '8/3'
-n_layers: 12
-n_heads: 12
-rms_norm: True
-tie_embeddings: True
 torch_compile: True
+
+# # Allow TF32 matmul for significant speedups!
+# cuda_matmul_allow_tf32: True
+# cudnn_allow_tf32: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps * ddp_world_size)
 steps_budget: 18500
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 32
-grad_accumulation_steps: 2
+micro_batch_size: 16
+grad_accumulation_steps: 4
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -49,7 +46,7 @@ grad_clip: 1.0
 
 scheduler: 'wsd'
 warmup_steps: 0.01
-cooldown_steps: 0.2
+cooldown_steps: 3500
 lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
@@ -58,18 +55,17 @@ log_every_steps: 50
 print_progress: True
 
 use_wandb: True
-wandb_project: 'doc_mask'
-wandb_dir: '/fast/najroldi/logs/doc_mask/wandb'
-wandb_run_name: '130M_save_01'
-exp_name: '130M_save_01'
-out_dir: '/fast/najroldi/exp/doc_mask'
+wandb_project: 'quant'
+wandb_dir: '/fast/najroldi/logs/quant/wandb'
+wandb_run_name: 'pythia_160M_10BT_baseline_02'
+exp_name: 'pythia_160M_10BT_baseline_02'
+out_dir: '/fast/najroldi/exp/quant'
 over_write: True
 
 resume: False
-resume_micro_step: null
+resume_step: null
 resume_exp_name: null
 
 save_last_checkpoint: True
 save_intermediate_checkpoints: True
 save_every_steps: 500
-
