--- a/config/pythia1BT/half_size.yaml
+++ b/config/pythia1BT/half_size.yaml
@@ -31,7 +31,7 @@ steps_budget: 83000
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
 micro_batch_size: 32
-grad_accumulation_steps: 4 
+grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -47,7 +47,7 @@ grad_clip: 1.0
 
 scheduler: 'wsd'
 warmup_steps: 0.01
-cooldown_steps: 350
+cooldown_steps: 16600
 lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
@@ -63,8 +63,8 @@ exp_name: 'half'
 out_dir: '/fast/atatjer/scalinglawsquantization/checkpoints/pythia_160M_10BT/'
 over_write: True
 
-resume: False
-resume_step: null
+resume: True
+resume_step: 34000
 resume_exp_name: null
 
 save_last_checkpoint: True
