--- a/config/pythia10BT/baseline_01_rerun.yaml
+++ b/config/pythia10BT/baseline_01_rerun.yaml
@@ -1,10 +1,10 @@
-# trainset: 99_762_225_152 (~100BT)
-# validset:      9_994_240 (~10MT)
+## CONFIG file
+## change paths with your own!
 
 deterministic: False
 seed: 100
 
-trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_100BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/train"
+trainset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/train" # tokens: 9_849_288_704
 vocab_size: 50277
 seq_len: 2048
 intra_doc_masking: False
@@ -13,24 +13,24 @@ sampler_seed: 1996
 num_workers: 4
 
 eval: True
-validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_100BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/valid"
-valid_tokens: 1000000  # 1M
-eval_every_steps: 1000
+validset_path: "/fast/najroldi/data/lm/fwedu/fwedu_sample_10BT/tokenized_EleutherAI_gpt-neox-20b/ctx_2048/valid"
+valid_tokens: 1_000_000
+eval_every_steps: 100
 
 model: 'pythia-160m'
 torch_compile: True
 
-# Allow TF32 matmul and cudnn
-cuda_matmul_allow_tf32: True
-cudnn_allow_tf32: True
+# # Allow TF32 matmul for significant speedups!
+# cuda_matmul_allow_tf32: True
+# cudnn_allow_tf32: True
 
 # note: step budget=token_budget/(seq_len * micro_batch_size * grad_accumulation_steps * ddp_world_size)
-steps_budget: 190000 # 99_614_720_000 tokens
+steps_budget: 18500
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
 micro_batch_size: 32
-grad_accumulation_steps: 1
+grad_accumulation_steps: 2 
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -38,31 +38,29 @@ dtype: 'bfloat16'
 
 optim: 'adamw'
 fused_optim: True
-lr: [1.e-3, 3.e-4]
+lr: 3.e-3
 weight_decay: 0.1
 beta1: 0.9
 beta2: 0.95
 grad_clip: 1.0
-corrected_weight_decay: True
-log_grad_norms: False
 
-scheduler: ['wsd']
+scheduler: 'wsd'
 warmup_steps: 0.01
-cooldown_steps: 38000
+cooldown_steps: 3500
 lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
 
-log_every_steps: 500
+log_every_steps: 50
 print_progress: True
 
 use_wandb: True
 wandb_project: 'quantization_pretraining'
-wandb_dir: '/fast/atatjer/wandb/quantization_pretraining/'
-wandb_run_name: 'pythia_160M_100BT_baseline_04'
-exp_name: 'pythia_160M_100BT_baseline_04'
+wandb_dir: '/fast/atatjer/wandb/quantization_pretraining'
+wandb_run_name: 'pythia_160M_10BT_baseline_01_rerun'
+exp_name: 'pythia_160M_10BT_baseline_01_rerun'
 out_dir: '/fast/atatjer/scalinglawsquantization/checkpoints'
-over_write: False
+over_write: True
 
 resume: False
 resume_step: null
@@ -70,5 +68,4 @@ resume_exp_name: null
 
 save_last_checkpoint: True
 save_intermediate_checkpoints: True
-save_every_steps: 2000 # save the model every X steps
-save_optim_every_steps: 2000 # save optimizer every Y steps
+save_every_steps: 500
