--- a/config/nld/lawa_sweep.yaml
+++ b/config/nld/lawa_sweep.yaml
@@ -1,12 +1,12 @@
 
-## => run with this bsz=128 on 1GPU
+## => run with this bsz=56 on 1GPU
 
 # avg
 eval_ckpt_folder: "/fast/atatjer/scalinglawsquantization/checkpoints/nld_baseline_01/job_idx_0"
 avg_start_step: 0
-avg_every_steps: 20
+avg_every_steps: [10, 20, 50, 100, 200, 500] # 6x
 avg_scheme: "LAWA"
-lawa_queue_len: 5
+lawa_queue_len: [2, 5, 10, 20, 50, 100] # 6x
 
 deterministic: False
 seed: 1996
@@ -62,24 +62,20 @@ lr_end_pct: null
 log_every_steps: null
 print_progress: null
 
-use_wandb: False
+use_wandb: True
 wandb_watch: False
 check_existing_wandb_run: False
-wandb_project: 'wa_lm_2'
+wandb_project: 'quant'
 wandb_dir: '/fast/najroldi/logs/quant/wandb'
-wandb_run_name: 'nld_lawa_01'
-exp_name: 'nld_lawa_01'
+wandb_run_name: 'nld_lawa_sweep_01'
+exp_name: 'nld_lawa_sweep_01'
+out_dir: '/fast/atatjer/scalinglawsquantization/checkpoints'
+over_write: True
 
 resume: null
 resume_step: null
 resume_exp_name: null
 
-out_dir: '/fast/atatjer/scalinglawsquantization/checkpoints'
-save_last_checkpoint: False
+save_last_checkpoint: True
 save_intermediate_checkpoints: True
-save_every_steps: 100
-save_optim: False
-save_scheduler: False
-save_scaler: False
-
-over_write: True
+save_every_steps: 500
