everything tied up

--- a/config/pythia10BT/baseline_01.yaml
+++ b/config/pythia10BT/baseline_01.yaml
@@ -29,8 +29,8 @@ steps_budget: 18500
 
 # note: this is micro batch size if grad_accumulation_steps>1
 # note: with ddp, effective batch size = batch_size * grad_accumulation_steps * ddp_world_size
-micro_batch_size: 16
-grad_accumulation_steps: 4
+micro_batch_size: 32
+grad_accumulation_steps: 2
 
 # note: choose between {float32, float16, bfloat16}
 # note: float16 data type will automatically use a GradScaler
@@ -51,21 +51,21 @@ lr_start: 0.0
 lr_end: 0.0
 lr_end_pct: null
 
-log_every_steps: 50
+log_every_steps: 2
 print_progress: True
 
 use_wandb: True
 wandb_project: 'quant'
-wandb_dir: '/fast/najroldi/logs/quant/wandb'
+wandb_dir: '/fast/atatjer/wandb/'
 wandb_run_name: 'pythia_160M_10BT_baseline_02'
 exp_name: 'pythia_160M_10BT_baseline_02'
-out_dir: '/fast/najroldi/exp/quant'
+out_dir: '/fast/atatjer/tmp/'
 over_write: True
 
 resume: False
 resume_step: null
 resume_exp_name: null
 
-save_last_checkpoint: True
-save_intermediate_checkpoints: True
+save_last_checkpoint: False
+save_intermediate_checkpoints: False
 save_every_steps: 500
