--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-absl-py==2.1.0
-datasets==3.5.0
-numpy==1.26.4
-PyYAML==6.0.2
-torch==2.6.0
-transformers==4.44.2
-wandb>=0.17.9
-zstandard==0.23.0
+absl-py>=2.1.0
+numpy>=2.3.4
+PyYAML>=6.0.3
+schedulefree>=1.4.1
+torch>=2.6.0
+transformers>=4.44.2
+wandb>=0.22.
